# Panda-Sorter-Converter-Upscaler-background-remover-and-line-art-too

./: .gitignore  ACTUAL_IMPLEMENTATION_STATUS.md  ACTUAL_WORK_SESSION_SUMMARY.md  ADVANCED_FEATURES.md  AI_MODELS_UI_PREVIEW.md  AI_MODEL_DOWNLOAD_SYSTEM.md  ALL_FIXES_COMPLETE.md  ALL_REQUIREMENTS_TRACKER.md  ALL_SESSIONS_FINAL_SUMMARY.md  ALPHA_CORRECTION_GUIDE.md  ANIMATION_MIGRATION_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_VISUAL_DIAGRAM.md  ARCHIVE_SUPPORT.md  BACKGROUND_REMOVER_GUIDE.md  BACKGROUND_REMOVER_IMPLEMENTATION.md  BEFORE_AFTER_COMPARISON.md  BG_REMOVER_UPDATE_COMPLETE.md  BRIDGE_REMOVAL_DOCUMENTATION.md  BRIDGE_REMOVAL_SUMMARY.md  BUG_FIXES_COMPLETE.md  BUG_FIXES_COMPLETE_SUMMARY.md  BUG_FIXES_FINAL_SUMMARY.md  BUG_FIXES_SUMMARY.md  BUILD.md  BUILD_FIXES_SUMMARY.md  BUILD_FIX_SUMMARY.md  CANVAS_MIGRATION_TRACKER.md  CANVAS_REMOVAL_COMPLETE.md  CHANGELOG_UPDATES.md  CODE_SIGNING.md  COMBINED_MODELS_UI_MOCKUP.txt  COMPLETE_CANVAS_INVENTORY.md  COMPLETE_QT_OPENGL_MIGRATION.md  COMPLETE_REMAINING_TASKS.md  COMPLETE_SESSION_SUMMARY.md  COMPLETE_TOOLS_IMPLEMENTATION.md  COMPLETE_WORK_SUMMARY.md  COMPLETION_REPORT.md  COMPREHENSIVE_APPLICATION_REVIEW.md  (+224 more)
app_data/: .crash_detection
docs/: AI_ORGANIZER_GUIDE.md  AI_ORGANIZER_QUICK_START.md  AI_ORGANIZER_UI_LAYOUT.md  ANIMATED_PANDA_AND_PROFANITY.md  BATCH_UPSCALING_IMPROVEMENTS.md  MASSIVE_SVG_AND_UNHINGED_PANDA.md  SVG_BUILD_GUIDE.md  TOOLTIPS_AND_SVG_IMPLEMENTATION.md
examples/: README.md  example_alpha_correction.py  example_clip_classification.py  (+5 more)
native/: Cargo.toml  pyproject.toml
native/src/: lib.rs
(+230 files in other folders)
